frontend/tests/errors/ER-039/length_non_supported_operand/test.vx
// @rfc: docs/vexel-rfc.md#runtime-semantics
// @desc: Length/absolute rejects unsupported operand kinds. | Reject |expr| on non-numeric non-array non-string values

#S(a:#i32);

&^main() -> #i32 {
    s = #S(7);
    |s|
}
